@@ -1,4 +1,4 @@
 DIST xgestures-0.4.tar.bz2 77902 RMD160 ad6e19d863d4649507f75d152fa13f6b3ae24ed1 SHA1 5fcd7169d203bbcbcaf86cafe858951623766feb SHA256 aec17a79e411abf00388f78adf8ceaaa1f4cbbc18e0f5c1b81d48ff3821459ca
-EBUILD xgestures-0.4.ebuild 619 RMD160 051e27ab077a7fe5c6f7af8a15bc3553fe525bcd SHA1 2cb571c6a265e7e7d32c3687ebe07e69380e49e0 SHA256 328109ebbdbba7855611693a2cf998657330eff7f4d7351fdd951def7dde643b
-MISC ChangeLog 291 RMD160 afdcb967329f1a1a488a27f0ecfd554bd30baed0 SHA1 fcecf81338938089e97437c02d0cddb9da1420a5 SHA256 f33dcd906cec3ddda525bcc9352c6175681d9e46b885ff08721b11ec72e11994
+EBUILD xgestures-0.4-r1.ebuild 737 RMD160 a261f4ed79bb3503f7adc94da81df39ae2b235e2 SHA1 c6da1b8c09e79cc1adbc2ce939ddf628669185b5 SHA256 4ba4be049a4d1e4913d8f090d4db57291fcbae8d7c9607591f81a6fce3f4c9f6
+MISC ChangeLog 466 RMD160 1418fb62346143cc0b74dde8798c18ed8cee3a78 SHA1 3c29d93f287a1d2b2a597a909faa3af84d18f02c SHA256 4d2cde87a42f6e7ee98b625c894cc88318c238278bd7218d9deb2c65bb39447a
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
