@@ -2,13 +2,13 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-DESCRIPTION="A gesture recognition program for X11 desktops"
+DESCRIPTION="A mouse gesture recognition program for X11 desktops"
 HOMEPAGE="http://www.cs.bgu.ac.il/~tzachar/xgestures.html"
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 RDEPEND="x11-libs/libXmu
@@ -23,5 +23,9 @@ DEPEND="${RDEPEND}
 src_install() {
 	emake DESTDIR="${D}" install || die "emake install failed!"
 	dodoc README NEWS AUTHORS ChangeLog
+	newdoc .gestures gestures
+	echo
+	elog "Copy file /usr/share/doc/${PF}/gestures to \$HOME/.gestures"
+	echo
 }
 
