@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Apr 2008; Charles Clément <caratorn@gmail.com> -xgestures-0.4.ebuild,
+  +xgestures-0.4-r1.ebuild:
+  Add ~x86, extend DESCRIPTION and install default configuration file
+
   13 Apr 2008; Michał Kiedrowicz (esqualante) <esqualante@o2.pl>
   +xgestures-0.4.ebuild, +metadata.xml:
   New Ebuild for bug 217337 with thanks to Tommy[D] and Ken69267
